--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 @font-face {
+    font-family: 'minimalist';
+    src: url('font/gakuran_font.TTF');
+  }
+@font-face {
     font-family: "gistesy";
     src: url('Font/gistesy/Gistesy.ttf');
   }
